--- a/Resources/Private/Templates/ErrorHandling/Show.html
+++ b/Resources/Private/Templates/ErrorHandling/Show.html
@@ -2,4 +2,7 @@
 
 <f:cObject typoscriptObjectPath="lib.tx_customerrorpage.contentElementRendering">{contentElements}</f:cObject>
 
+<f:link.typolink parameter="{refererQueryParameter}" additionalParams="{refererQueryAdditionalParams}">
+	<f:translate key="tx_custom_error_page_pi1.fallbackUrlTitle"/>
+</f:link.typolink>
 </html>
